--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I'm Your Name.<br>I create amazing web experiences.</h1>
-                <p>I'm a [your profession] specializing in [your specialty]. I help businesses achieve their goals through thoughtful design and development.</p>
-                <a href="#projects" class="btn">View My Work</a>
+                <h1>Hi, I am Gray.</h1>
+                <p>I'm a Clinical psychologist, Business developer and Angel investor.</p>
+                <a href="#projects" class="btn">Portfolio</a>
             </div>
         </div>
     </section>
