--- a/index.html
+++ b/index.html
@@ -293,10 +293,9 @@
             <nav>
                 <div class="logo">Your Name</div>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home">explorer</a></li>
+                    <li><a href="#about">provenance</a></li>
+                    <li><a href="#projects">community</a></li>
                 </ul>
             </nav>
         </div>
