--- a/index.html
+++ b/index.html
@@ -302,11 +302,22 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="home" class="hero">
+    <section id="provenance" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I am Gray.</h1>
-                <p>I'm a Clinical psychologist, Business developer and Angel investor.</p>
+                <h1>Hello, I am a neck. I have long neck.</h1>
+                <p>Longnecks is a cultural cyberpunk movement born from the materialization of a nascent community who tried to build public goods on 
+
+In 2022 a group of anonymous developers decide to build a new L1 blockchain with the idea to democratize its public goods using the Cosmos toolkit. CANTO blockchain is born at the end of 2022, with Scott Lewis, Joseph Delong and other prominent figures at its core. 
+
+In this nascent and vibrant context, three early Canto users decide to provide the community with a standout identity; “Long Necks”. 
+
+Long Necks is deeply embedded in the cryptography counterculture where anonymity is a must, thus, creating the need to adopt a new internet identity in form of a “pfp” (profile picture). The same generation that first had access to videogames and grew up with a desk computer is now on their thirties, the generational replacement is taking place at this very moment and the melancholy of the past is at play, in addition, this new generation of developers face the same problems; a storage problem, but, instead of a RAM/CPU problem, this time is a blockchain problem. 
+
+(Melancholy of the past) + (Storage problems) = (pixel art)
+
+The character itself is inspired on the black swan pepe deriv.
+.</p>
                 <a href="#projects" class="btn">Portfolio</a>
             </div>
         </div>
